recorddto, personcontroller ja midagi veel katki

--- a/veebipood/pom.xml
+++ b/veebipood/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.vladislavgoltjajev</groupId>
+			<artifactId>java-isikukood</artifactId>
+			<version>2.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
